--- a/.babelrc
+++ b/.babelrc
@@ -24,6 +24,8 @@
     }
   },
   "plugins": [
+    "@babel/plugin-transform-async-to-generator",
+    "@babel/plugin-transform-regenerator",
     "@babel/plugin-syntax-dynamic-import",
     "@babel/plugin-syntax-import-meta",
     "@babel/plugin-proposal-class-properties",
