--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@material-ui/core": "3.3.2",
     "compression": "1.7.3",
     "css-loader": "1.0.1",
+    "emotion": "9.2.12",
     "express": "4.16.4",
     "express-healthcheck": "0.1.0",
     "helmet": "3.14.0",
@@ -34,9 +35,12 @@
     "normalize.css": "8.0.0",
     "object-assign": "4.1.1",
     "pre-commit": "1.2.2",
+    "prismic-javascript": "1.5.0",
+    "prismic-reactjs": "0.3.1",
     "prop-types": "15.6.2",
     "react": "16.6.0",
     "react-dom": "16.6.0",
+    "react-emotion": "9.2.12",
     "react-redux": "5.1.0",
     "react-redux-i18n": "1.9.3",
     "react-router": "4.3.1",
@@ -67,8 +71,10 @@
     "@babel/plugin-proposal-throw-expressions": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/plugin-transform-async-to-generator": "7.1.0",
     "@babel/plugin-transform-react-constant-elements": "^7.0.0",
-    "@babel/polyfill": "^7.0.0",
+    "@babel/plugin-transform-regenerator": "7.0.0",
+    "@babel/polyfill": "7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
